Fix Android schedule runtime compatibility