@@ -1,5 +1,7 @@
 package be.wacken.planner.application;
 
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public record SharedSchedule(SharedScheduleStatus status, String message, List<ScheduleDay> days) {
@@ -13,7 +15,7 @@ public record SharedSchedule(SharedScheduleStatus status, String message, List<S
         if (days == null) {
             throw new IllegalArgumentException("Shared schedule days must not be null.");
         }
-        days = List.copyOf(days);
+        days = Collections.unmodifiableList(new ArrayList<>(days));
     }
 
     public static SharedSchedule generated(List<ScheduleDay> days) {
@@ -21,10 +23,10 @@ public record SharedSchedule(SharedScheduleStatus status, String message, List<S
     }
 
     public static SharedSchedule noScheduledPerformances() {
-        return new SharedSchedule(SharedScheduleStatus.NO_SCHEDULED_PERFORMANCES, "No scheduled performances are available yet.", List.of());
+        return new SharedSchedule(SharedScheduleStatus.NO_SCHEDULED_PERFORMANCES, "No scheduled performances are available yet.", Collections.emptyList());
     }
 
     public static SharedSchedule noSelections() {
-        return new SharedSchedule(SharedScheduleStatus.NO_SELECTIONS, "No performances were selected by the group rules.", List.of());
+        return new SharedSchedule(SharedScheduleStatus.NO_SELECTIONS, "No performances were selected by the group rules.", Collections.emptyList());
     }
 }
