@@ -1,5 +1,6 @@
 package be.wacken.planner.domain;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -9,6 +10,6 @@ public interface RatingRepository {
     Optional<Rating> findByUserAndBand(String userName, Band band);
 
     default List<SavedRating> findAll() {
-        return List.of();
+        return Collections.emptyList();
     }
 }
